--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <div class="links">
@@ -15,7 +16,7 @@
     </div>
     <div>
       <h1>Something that I can teach:</h1>
-      <p></p>
+      <p>I can teach someone taekwondo</p>
       <img
         src="images\two-boys-fighting-taekwondo-competition-illustration-vector_105094-63.avif"
       />
