--- a/spots.html
+++ b/spots.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <div class="links">
@@ -17,18 +18,30 @@
       <!-- Here is a table of good places in NYC -->
       <table>
         <tr>
-          <td></td>
-          <td><img src=""/ alt=""></td>
+          <td>
+            <video controls>
+              <source src="" type="" />
+              Video Unsupported
+            </video>
+          </td>
           <td>insert location here</td>
+          <td>insert explanation here</td>
         </tr>
 
         <tr>
-          <td><img src=""/ alt=""></td>
+          <td>
+            <img
+              src="images\C202108-T-Qiao-Lin-Hotpot-broths.jpg"
+              alt="hotpot"
+            />
+          </td>
           <td>insert location here</td>
+          <td>insert explanation here</td>
         </tr>
         <tr>
-          <td><img src=""/ alt=""></td>
+          <td><img src="" alt="" /></td>
           <td>insert location here</td>
+          <td>insert explanation here</td>
         </tr>
       </table>
     </div>
