--- a/skills.html
+++ b/skills.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <div class="links">
+    <nav class="links">
       <a href="index.html">Home</a>
-      <a href="favorites.html">Favories</a>
+      <a href="favorites.html">Favorites</a>
       <a href="skills.html">Skills</a>
       <a href="spots.html">Spots</a>
-    </div>
+    </nav>
     <div>
-      <h1>Something that I can teach:</h1>
+      <h1>Something that I can teach</h1>
       <p>I can teach someone taekwondo</p>
       <img
         src="images\two-boys-fighting-taekwondo-competition-illustration-vector_105094-63.avif"
