--- a/spots.html
+++ b/spots.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <div class="links">
+    <nav class="links">
       <a href="index.html">Home</a>
-      <a href="favorites.html">Favories</a>
+      <a href="favorites.html">Favorites</a>
       <a href="skills.html">Skills</a>
       <a href="spots.html">Spots</a>
-    </div>
+    </nav>
     <div>
       <!-- Here is a table of good places in NYC -->
       <table>
