--- a/favorites.html
+++ b/favorites.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <div class="links">
+    <nav class="links">
       <a href="index.html">Home</a>
-      <a href="favorites.html">Favories</a>
+      <a href="favorites.html">Favorites</a>
       <a href="skills.html">Skills</a>
       <a href="spots.html">Spots</a>
-    </div>
+    </nav>
     <div>
-      <h1>Some of my Hobbies and Interest:</h1>
+      <h1>Some of my Hobbies and Interest</h1>
       <ul>
         <li>Exercising</li>
         <li>Gaming</li>
