--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="spots.html">Spots</a>
     </nav>
     <div>
+      <!-- Here is a little section talking about me -->
       <h1>About Me</h1>
       <p>My name is Wei and ...</p>
     </div>
