--- a/skills.html
+++ b/skills.html
@@ -15,6 +15,7 @@
       <a href="spots.html">Spots</a>
     </nav>
     <div>
+      <!-- Here is a section of things that I can teach -->
       <h1>Something that I can teach</h1>
       <p>I can teach someone taekwondo</p>
       <img
