--- a/favorites.html
+++ b/favorites.html
@@ -15,6 +15,7 @@
       <a href="spots.html">Spots</a>
     </nav>
     <div>
+      <!-- Here is a list of my hobbies and interests -->
       <h1>Some of my Hobbies and Interest</h1>
       <ul>
         <li>Exercising</li>
