--- a/skills.html
+++ b/skills.html
@@ -14,13 +14,21 @@
       <a href="skills.html">Skills</a>
       <a href="spots.html">Spots</a>
     </nav>
-    <div>
+    <div class="example">
       <!-- Here is a section of things that I can teach -->
       <h1>Something that I can teach</h1>
-      <p>I can teach someone taekwondo</p>
-      <img
-        src="images\two-boys-fighting-taekwondo-competition-illustration-vector_105094-63.avif"
-      />
+      <span>
+        <img src="images\taekwondo.avif" />
+        <p>I can teach someone taekwondo</p>
+      </span>
+      <span>
+        <img src="images\math.jpg" />
+        <p>I can teach someone math</p>
+      </span>
+      <span>
+        <img src="images\code.jpg" />
+        <p>I can teach someone how to code</p>
+      </span>
     </div>
   </body>
 </html>
