--- a/skills.html
+++ b/skills.html
@@ -19,15 +19,18 @@
       <h1>Something that I can teach</h1>
       <span>
         <img src="images\taekwondo.avif" />
-        <p>I can teach someone taekwondo</p>
+        <p>
+          As a black red belt in taekwondo, I can at least teach someone the
+          basics
+        </p>
       </span>
       <span>
         <img src="images\math.jpg" />
-        <p>I can teach someone math</p>
+        <p>I can help tutor someone in math up to calculus</p>
       </span>
       <span>
         <img src="images\code.jpg" />
-        <p>I can teach someone how to code</p>
+        <p>I can teach someone the basics of coding</p>
       </span>
     </div>
   </body>
