--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <nav class="links">
-      <a href="index.html">Home</a>
-      <a href="favorites.html">Favorites</a>
-      <a href="skills.html">Skills</a>
-      <a href="spots.html">Spots</a>
-    </nav>
-    <div>
-      <!-- Here is a little section talking about me -->
-      <h1>About Me</h1>
-      <p>My name is Wei and ...</p>
+    <div class="hero">
+      <nav class="links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="favorites.html">Favorites</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="spots.html">Spots</a></li>
+        </ul>
+      </nav>
+      <div class="page1">
+        <!-- Here is a little section talking about me -->
+        <div class="about">
+          <h1>About Me</h1>
+        </div>
+        <div class="description">
+          <p>
+            Hello everyone, my name is Wei.
+          </p>
+        </br>
+          <p>
+            In my free time I enjoy exercising, playing video games, and listening to music. 
+          </p>
+        </div>
+      </div>
+      <footer>&copy;</footer>
     </div>
-    <footer>&copy;</footer>
   </body>
 </html>
