--- a/favorites.html
+++ b/favorites.html
@@ -8,20 +8,28 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <nav class="links">
-      <a href="index.html">Home</a>
-      <a href="favorites.html">Favorites</a>
-      <a href="skills.html">Skills</a>
-      <a href="spots.html">Spots</a>
-    </nav>
-    <div>
-      <!-- Here is a list of my hobbies and interests -->
-      <h1>Some of my Hobbies and Interest</h1>
-      <ul>
-        <li>Exercising</li>
-        <li>Gaming</li>
-        <li></li>
-      </ul>
+    <div class="hero">
+      <nav class="links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="favorites.html">Favorites</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="spots.html">Spots</a></li>
+        </ul>
+      </nav>
+      <div class="page">
+        <!-- Here is a list of my hobbies and interests -->
+        <div class="about" id="page2">
+          <h1>Some of my Hobbies and Interest</h1>
+        </div>
+        <div class="description" id="page2">
+          <ul>
+            <li>Exercising</li>
+            <li>Gaming</li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
