--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </p>
         </br>
           <p>
-            In my free time I enjoy exercising, playing video games, and listening to music. 
+            In my free time I enjoy exercising, playing video games, and listening to music. My dream school is Columbia and I hope to get a cat in the future 
           </p>
         </div>
       </div>
