--- a/favorites.html
+++ b/favorites.html
@@ -11,6 +11,7 @@
     <div class="hero">
       <nav class="links">
         <ul>
+          <li id="copyright">&copy;</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="favorites.html">Favorites</a></li>
           <li><a href="skills.html">Skills</a></li>
@@ -20,14 +21,44 @@
       <div class="page">
         <!-- Here is a list of my hobbies and interests -->
         <div class="about" id="page2">
-          <h1>Some of my Hobbies and Interest</h1>
+          <h1>Hobbies and Interest</h1>
         </div>
         <div class="description" id="page2">
-          <ul>
-            <li>Exercising</li>
-            <li>Gaming</li>
-            <li></li>
-          </ul>
+          <div>
+            <img src="images/weightlifting.png" alt="Guy benching" />
+            <p>
+              I really enjoy going to the gym with my friends. I'm still working
+              on going more consistently
+            </p>
+          </div>
+
+          <div>
+            <img src="images/gaming.png" alt="Gaming controller" />
+            <p>
+              When I'm not swamped with work, I enjoy playing video games with
+              my friends.
+            </p>
+          </div>
+          <div>
+            <audio controls>
+              <source
+                src="audio/video/rain-and-thunder-nature-sounds-7803.mp3"
+                type="audio/mp3"
+              />
+              Your browser does not support the audio element.
+            </audio>
+            <p>like lisening to the sound of rain when I'm sleeping</p>
+          </div>
+          <div>
+            <video controls>
+              <source
+                src="audio/video/videoplayback.mp4.crdownload"
+                type="video/mp4"
+              />
+              Your browser does not support the video element.
+            </video>
+            <p class="videotag">When I'm studying sometimes I listen to lofi</p>
+          </div>
         </div>
       </div>
     </div>
