--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="hero">
       <nav class="links">
         <ul>
+          <li id="copyright">&copy;</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="favorites.html">Favorites</a></li>
           <li><a href="skills.html">Skills</a></li>
@@ -23,13 +24,17 @@
           <h1>About Me</h1>
         </div>
         <div class="description">
-          <p>
+          <h2>
             Hello everyone, my name is Wei.
-          </p>
+          </h2>
         </br>
           <p>
-            In my free time I enjoy exercising, playing video games, and listening to music. My dream school is Columbia and I hope to get a cat in the future 
+            In my free time I enjoy exercising, playing video games, and listening to music. My dream school is Columbia and I hope to get a cat in the future. 
           </p>
+        </br>
+          <img src="images/columbia.jpeg" alt="Columbia University"/>
+          <img src="images/cat.jpg" alt="Cute Cat"/>
+          <p>Cats > Dogs</p>
         </div>
       </div>
       <footer>&copy;</footer>
