--- a/spots.html
+++ b/spots.html
@@ -9,10 +9,13 @@
   </head>
   <body>
     <nav class="links">
-      <a href="index.html">Home</a>
-      <a href="favorites.html">Favorites</a>
-      <a href="skills.html">Skills</a>
-      <a href="spots.html">Spots</a>
+      <ul>
+        <li id="copyright">&copy;</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="favorites.html">Favorites</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="spots.html">Spots</a></li>
+      </ul>
     </nav>
     <div>
       <!-- Here is a table of good places in NYC -->
