--- a/skills.html
+++ b/skills.html
@@ -17,24 +17,28 @@
         <li><a href="spots.html">Spots</a></li>
       </ul>
     </nav>
-    <div class="example">
-      <!-- Here is a section of things that I can teach -->
-      <h1>Something that I can teach</h1>
-      <span>
-        <img src="images\taekwondo.avif" />
-        <p>
-          As a black red belt in taekwondo, I can at least teach someone the
-          basics
-        </p>
-      </span>
-      <span>
-        <img src="images\math.jpg" />
-        <p>I can help tutor someone in math up to calculus</p>
-      </span>
-      <span>
-        <img src="images\code.jpg" />
-        <p>I can teach someone the basics of coding</p>
-      </span>
+    <div class="page">
+      <!-- Here is a list of my hobbies and interests -->
+      <div class="about" id="page2">
+        <h1>I Can Teach Someone</h1>
+      </div>
+      <div class="description" id="page2">
+        <div>
+          <img src="images\taekwondo.avif" />
+          <p>
+            As a black red belt in taekwondo, I can at least teach someone the
+            basics
+          </p>
+        </div>
+        <div>
+          <img src="images\math.jpg" />
+          <p>I can help tutor someone in math up to calculus</p>
+        </div>
+        <div>
+          <img src="images\code.jpg" />
+          <p>I can teach someone the basics of coding</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
