--- a/skills.html
+++ b/skills.html
@@ -17,26 +17,26 @@
         <li><a href="spots.html">Spots</a></li>
       </ul>
     </nav>
-    <div class="page">
+    <div class="page3">
       <!-- Here is a list of my hobbies and interests -->
-      <div class="about" id="page2">
+      <div class="about" id="page3">
         <h1>I Can Teach Someone</h1>
       </div>
-      <div class="description" id="page2">
+      <div class="description" id="page3">
         <div>
-          <img src="images\taekwondo.avif" />
+          <img src="images/taekwondo.avif" />
           <p>
             As a black red belt in taekwondo, I can at least teach someone the
             basics
           </p>
         </div>
         <div>
-          <img src="images\math.jpg" />
-          <p>I can help tutor someone in math up to calculus</p>
+          <img src="images/math.jpg" />
+          <p>I can help tutor someone in math, especially SAT math</p>
         </div>
         <div>
-          <img src="images\code.jpg" />
-          <p>I can teach someone the basics of coding</p>
+          <img src="images/chinese.jpg" />
+          <p>I can teach someone the basics of speaking and writing chinese</p>
         </div>
       </div>
     </div>
